--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -1,25 +1,113 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A388b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blue-Sky-Wallpaper-.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="BnM-tJ-FZM">
+                                <rect key="frame" x="1" y="44" width="374" height="623"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="search" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jhI-XS-ouD">
+                                <rect key="frame" x="36" y="188" width="302" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="wsG-zn-AsF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dce-Ll-raS">
+                                <rect key="frame" x="48" y="347" width="290" height="262"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CLN-UK-5n5">
+                                <rect key="frame" x="165" y="244" width="57" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="IMC-LQ-F27"/>
+                                    <constraint firstAttribute="width" constant="57" id="JQ3-Wx-aLo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Find">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="findButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3Wo-46-0Ah"/>
+                                </connections>
+                            </button>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wsn-5X-nAH">
+                                <rect key="frame" x="1" y="0.0" width="374" height="44"/>
+                                <items>
+                                    <navigationItem title="Weather Forecast" id="jOH-QW-AF6"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mpk-z4-GiF">
+                                <rect key="frame" x="36" y="86" width="302" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="q0c-sC-EdG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pnV-j0-kIn">
+                                <rect key="frame" x="16" y="244" width="139" height="95"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jrs-Xt-jBS">
+                                <rect key="frame" x="230" y="244" width="139" height="95"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jhI-XS-ouD" firstAttribute="top" secondItem="Mpk-z4-GiF" secondAttribute="bottom" constant="44" id="2l0-ZX-HEV"/>
+                            <constraint firstItem="BnM-tJ-FZM" firstAttribute="trailing" secondItem="Wsn-5X-nAH" secondAttribute="trailing" id="5vj-2o-4LD"/>
+                            <constraint firstItem="jhI-XS-ouD" firstAttribute="leading" secondItem="Mpk-z4-GiF" secondAttribute="leading" id="74r-od-UmJ"/>
+                            <constraint firstItem="Wsn-5X-nAH" firstAttribute="leading" secondItem="BnM-tJ-FZM" secondAttribute="leading" id="FfQ-lQ-se8"/>
+                            <constraint firstItem="jhI-XS-ouD" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="LQ9-7l-7Ne"/>
+                            <constraint firstAttribute="trailing" secondItem="BnM-tJ-FZM" secondAttribute="trailing" id="O4N-lw-HRY"/>
+                            <constraint firstItem="Dce-Ll-raS" firstAttribute="centerX" secondItem="CLN-UK-5n5" secondAttribute="centerX" id="RMN-N9-N4o"/>
+                            <constraint firstItem="Mpk-z4-GiF" firstAttribute="top" secondItem="Wsn-5X-nAH" secondAttribute="bottom" constant="42" id="Wr9-uv-Y6g"/>
+                            <constraint firstItem="BnM-tJ-FZM" firstAttribute="top" secondItem="Wsn-5X-nAH" secondAttribute="bottom" id="aRV-h2-Ptw"/>
+                            <constraint firstItem="Mpk-z4-GiF" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="20" id="buW-qQ-rA3"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Dce-Ll-raS" secondAttribute="bottom" constant="58" id="eQk-7y-xl1"/>
+                            <constraint firstItem="Wsn-5X-nAH" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-15" id="ejC-BV-nx4"/>
+                            <constraint firstItem="CLN-UK-5n5" firstAttribute="top" secondItem="jhI-XS-ouD" secondAttribute="bottom" constant="26" id="gF3-dE-PRj"/>
+                            <constraint firstItem="Dce-Ll-raS" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="32" id="hRg-x1-zGs"/>
+                            <constraint firstItem="jhI-XS-ouD" firstAttribute="trailing" secondItem="Dce-Ll-raS" secondAttribute="trailing" id="idT-Bw-LGj"/>
+                            <constraint firstItem="jhI-XS-ouD" firstAttribute="trailing" secondItem="Mpk-z4-GiF" secondAttribute="trailing" id="k86-po-QSw"/>
+                            <constraint firstItem="Dce-Ll-raS" firstAttribute="top" secondItem="CLN-UK-5n5" secondAttribute="bottom" constant="68" id="mYx-qx-sNS"/>
+                            <constraint firstItem="Wsn-5X-nAH" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="nan-jQ-Ubu"/>
+                            <constraint firstItem="BnM-tJ-FZM" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="vzS-WY-aqw"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="cityName" destination="Mpk-z4-GiF" id="2gV-lL-Ew0"/>
+                        <outlet property="cityTextField" destination="jhI-XS-ouD" id="Ymm-jZ-EDA"/>
+                        <outlet property="forecastLabel" destination="Dce-Ll-raS" id="sQJ-4k-G6a"/>
+                        <outlet property="leftImage" destination="pnV-j0-kIn" id="dUn-h9-hli"/>
+                        <outlet property="rightImage" destination="jrs-Xt-jBS" id="8L3-n4-EVH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="489.5" y="360.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Blue-Sky-Wallpaper-.jpg" width="1024" height="768"/>
+    </resources>
 </document>
