--- a/Weather WatchKit App/Base.lproj/Interface.storyboard
+++ b/Weather WatchKit App/Base.lproj/Interface.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="6750" systemVersion="14A388b" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7531" systemVersion="14D87p" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
     </dependencies>
     <scenes>
@@ -19,9 +19,14 @@
                         </group>
                         <separator alignment="left" id="Mzr-dZ-etu"/>
                         <imageView width="135" height="37" alignment="center" contentMode="scaleAspectFill" id="fea-Sl-Uas"/>
-                        <label width="130" height="76" alignment="left" text="Loading" numberOfLines="0" minimumScaleFactor="0.20000000000000015" id="vUQ-iU-UXA">
+                        <label width="130" height="76" alignment="center" text="Loading" numberOfLines="0" minimumScaleFactor="0.20000000000000015" id="vUQ-iU-UXA">
                             <fontDescription key="font" style="UICTFontTextStyleCaption1"/>
                         </label>
+                        <button width="136" alignment="center" title="Search" id="vWf-KL-6la">
+                            <connections>
+                                <action selector="searchButton" destination="AgC-eL-Hgc" id="50n-5B-oMk"/>
+                            </connections>
+                        </button>
                     </items>
                     <connections>
                         <outlet property="cityLabel" destination="RGD-oI-hfW" id="ANU-Wj-rop"/>
@@ -30,7 +35,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="75" y="203"/>
+            <point key="canvasLocation" x="75" y="202.5"/>
         </scene>
         <!--Glance Interface Controller-->
         <scene sceneID="rjY-Ar-IMT">
