--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A388b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6750" systemVersion="14D87p" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -38,36 +38,22 @@
                                 <color key="textColor" red="0.28870738639999999" green="0.28870738639999999" blue="0.28870738639999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CLN-UK-5n5">
-                                <rect key="frame" x="165" y="244" width="57" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="57" id="aub-Q5-VcR"/>
-                                    <constraint firstAttribute="height" constant="35" id="iWK-2f-5Wq"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="21"/>
-                                <state key="normal" title="Find">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="findButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3Wo-46-0Ah"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mpk-z4-GiF">
                                 <rect key="frame" x="37" y="60" width="302" height="66"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="LZr-GY-Qbc"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="29"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="27"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VsG-GH-UDP">
-                                <rect key="frame" x="128" y="150" width="121" height="30"/>
+                                <rect key="frame" x="119" y="150" width="136" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Dko-Gl-Uqp"/>
-                                    <constraint firstAttribute="width" constant="121" id="x4L-RL-MRz"/>
+                                    <constraint firstAttribute="width" constant="136" id="x4L-RL-MRz"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="20"/>
                                 <state key="normal" title="My Location">
                                     <color key="titleColor" red="0.91881707702020199" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -82,23 +68,57 @@
                                     <navigationItem title="Weather Forecast" id="jOH-QW-AF6"/>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHo-Tl-Aye">
+                                <rect key="frame" x="37" y="274" width="124" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999964" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBZ-Rn-Gp9">
+                                <rect key="frame" x="238" y="280" width="100" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="S7j-Ri-Rs4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CLN-UK-5n5">
+                                <rect key="frame" x="153" y="243" width="70" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="aub-Q5-VcR"/>
+                                    <constraint firstAttribute="height" constant="35" id="iWK-2f-5Wq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="25"/>
+                                <state key="normal" title="Find">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="findButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="3Wo-46-0Ah"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="jhI-XS-ouD" firstAttribute="top" secondItem="VsG-GH-UDP" secondAttribute="bottom" constant="8" symbolic="YES" id="0Ji-cm-BeX"/>
-                            <constraint firstItem="Dce-Ll-raS" firstAttribute="top" secondItem="CLN-UK-5n5" secondAttribute="bottom" constant="43" id="4Ep-Ql-dLB"/>
-                            <constraint firstItem="CLN-UK-5n5" firstAttribute="top" secondItem="jhI-XS-ouD" secondAttribute="bottom" constant="26" id="4f5-zV-EmH"/>
+                            <constraint firstItem="Dce-Ll-raS" firstAttribute="top" secondItem="CLN-UK-5n5" secondAttribute="bottom" constant="44" id="4Ep-Ql-dLB"/>
+                            <constraint firstItem="CLN-UK-5n5" firstAttribute="top" secondItem="jhI-XS-ouD" secondAttribute="bottom" constant="25" id="4f5-zV-EmH"/>
                             <constraint firstItem="BnM-tJ-FZM" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="6Sz-JJ-Y4I"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WBZ-Rn-Gp9" secondAttribute="trailing" constant="21" id="6TC-go-qk1"/>
                             <constraint firstItem="Wsn-5X-nAH" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-15" id="8YZ-6X-9Nf"/>
                             <constraint firstItem="jhI-XS-ouD" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="Acj-3z-5KG"/>
-                            <constraint firstItem="VsG-GH-UDP" firstAttribute="centerX" secondItem="Mpk-z4-GiF" secondAttribute="centerX" id="HqX-lJ-iiq"/>
+                            <constraint firstItem="CLN-UK-5n5" firstAttribute="leading" secondItem="UHo-Tl-Aye" secondAttribute="trailing" constant="-8" id="DtZ-yr-L7i"/>
+                            <constraint firstItem="VsG-GH-UDP" firstAttribute="centerX" secondItem="Mpk-z4-GiF" secondAttribute="centerX" constant="-1" id="HqX-lJ-iiq"/>
                             <constraint firstItem="Wsn-5X-nAH" firstAttribute="leading" secondItem="BnM-tJ-FZM" secondAttribute="leading" id="JVl-qa-1jb"/>
+                            <constraint firstItem="UHo-Tl-Aye" firstAttribute="top" secondItem="jhI-XS-ouD" secondAttribute="bottom" constant="56" id="Jst-W1-q51"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Dce-Ll-raS" secondAttribute="bottom" constant="83" id="L80-KX-ZCo"/>
-                            <constraint firstItem="CLN-UK-5n5" firstAttribute="centerX" secondItem="Dce-Ll-raS" secondAttribute="centerX" id="Lqc-R8-W4U"/>
+                            <constraint firstItem="Dce-Ll-raS" firstAttribute="top" secondItem="WBZ-Rn-Gp9" secondAttribute="bottom" constant="8" symbolic="YES" id="LBn-Vg-QUI"/>
+                            <constraint firstItem="CLN-UK-5n5" firstAttribute="centerX" secondItem="Dce-Ll-raS" secondAttribute="centerX" constant="-5" id="Lqc-R8-W4U"/>
                             <constraint firstItem="Mpk-z4-GiF" firstAttribute="centerX" secondItem="Wsn-5X-nAH" secondAttribute="centerX" id="OXI-lL-5RV"/>
                             <constraint firstItem="Dce-Ll-raS" firstAttribute="trailing" secondItem="jhI-XS-ouD" secondAttribute="trailing" id="PxE-I4-0sA"/>
                             <constraint firstItem="Wsn-5X-nAH" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="QEG-sp-8IX"/>
                             <constraint firstItem="Mpk-z4-GiF" firstAttribute="top" secondItem="Wsn-5X-nAH" secondAttribute="bottom" constant="16" id="R1V-XD-vIQ"/>
+                            <constraint firstItem="UHo-Tl-Aye" firstAttribute="leading" secondItem="Mpk-z4-GiF" secondAttribute="leading" id="Rrh-HH-nTG"/>
                             <constraint firstItem="Mpk-z4-GiF" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="21" id="TCe-gO-mEg"/>
                             <constraint firstItem="jhI-XS-ouD" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="20" id="VRb-oZ-RP8"/>
                             <constraint firstItem="Dce-Ll-raS" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="32" id="cdQ-dj-sTp"/>
@@ -106,6 +126,8 @@
                             <constraint firstAttribute="trailing" secondItem="BnM-tJ-FZM" secondAttribute="trailing" id="nfB-u6-l02"/>
                             <constraint firstItem="VsG-GH-UDP" firstAttribute="top" secondItem="Mpk-z4-GiF" secondAttribute="bottom" constant="24" id="ngg-Fd-JbO"/>
                             <constraint firstItem="BnM-tJ-FZM" firstAttribute="top" secondItem="Wsn-5X-nAH" secondAttribute="bottom" id="uWV-vQ-ib4"/>
+                            <constraint firstItem="Dce-Ll-raS" firstAttribute="top" secondItem="UHo-Tl-Aye" secondAttribute="bottom" constant="8" symbolic="YES" id="xxA-LI-o7L"/>
+                            <constraint firstItem="Dce-Ll-raS" firstAttribute="top" secondItem="UHo-Tl-Aye" secondAttribute="bottom" constant="8" id="yCg-Od-RgK"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -114,6 +136,8 @@
                         <outlet property="cityName" destination="Mpk-z4-GiF" id="2gV-lL-Ew0"/>
                         <outlet property="cityTextField" destination="jhI-XS-ouD" id="Ymm-jZ-EDA"/>
                         <outlet property="forecastLabel" destination="Dce-Ll-raS" id="sQJ-4k-G6a"/>
+                        <outlet property="maxTemp" destination="UHo-Tl-Aye" id="TJ9-57-idr"/>
+                        <outlet property="minTemp" destination="WBZ-Rn-Gp9" id="IUS-FL-iYG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
